userlist cutoff fixed

--- a/react-app/src/components/onlinestatus.css
+++ b/react-app/src/components/onlinestatus.css
@@ -15,6 +15,7 @@
     background-color: #2F3136;
 }
 
+
 .userslist{
     color: #96989D;
     display: flex;
@@ -84,6 +85,7 @@
 }
 
 .userlistonline{
+    margin-top: 20px;
     font-size: 12px;
     color: #96989D;
     margin-left: 20px;
